overlays class used for images on dancefloor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,9 @@ body {
   position: relative;
   margin: auto;
 }
+
+.overlays {
+  position: absolute;
+  pointer-events: none;
+  height: 150px;
+}
