Moved to bootstrap 4, added form (no js)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ body {
   background: none;
 }
 
+#prevNextBtnGroup {
+  margin-top: 20px;
+}
+
 .overlays {
   position: absolute;
   pointer-events: none;
