--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
+
 body {
   background-color: black;
 }
 
-#danceFloorImg {
-  display: block;
-  position: relative;
+#dancefloorContainer {
   margin: auto;
+  width: 679px;
+  position: relative;
 }
 
 .overlays {
