made stage bigger, added background animations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,17 @@ html {
   -o-background-size: cover;
   background-size: cover;
   background-color: rgb(51, 51, 255);
-  background-blend-mode:darken;
+
+  -webkit-animation: 2s linear 0s infinite alternate changeLights;
+  animation: 2s linear 0s infinite alternate changeLights;
 }
+
+@-webkit-keyframes changeLights {
+  from { background-blend-mode: darken; }
+  to {   background-blend-mode: none; }  }
+@keyframes changeLights {
+  from { background-blend-mode: darken; }
+  to {   background-blend-mode: none; }  }
 
 body {
   background: none;
@@ -14,8 +23,14 @@ body {
 
 #dancefloorContainer {
   margin: auto;
-  width: 697px;
+  width: 900px;
   position: relative;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+#danceFloorImg {
+  width: 900px
 }
 
 #gifSelectPanel {
