--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,9 @@ body {
   background-color: purple;
   color: white;
   padding: 10px;
-  animation: colorchange 50s; /* animation-name followed by duration in seconds*/
+  animation: colorchange 50s linear infinite; /* animation-name followed by duration in seconds*/
    /* you could also use milliseconds (ms) or something like 2.5s */
-  -webkit-animation: colorchange 50s; /* Chrome and Safari */
+  -webkit-animation: colorchange 50s linear infinite; /* Chrome and Safari */
 }
 
 #instructions {
